--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
-title = 'My New Hugo Site2'
+title = 'My New Hugo Site2+1'
 theme = 'gokarna'
 
 
