--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ languageCode = "en"
 # Choose one of emacs, trac or perldoc
 pygmentsStyle = "monokai"
 theme = "gokarna"
-title = "Gokarna"
+title = "能捷"
 
 [params]
   avatarAltText = "avatar"
@@ -36,13 +36,14 @@ title = "Gokarna"
     </script>
   """
 
-  description = "Sky above, sand below and peace within"
-  footer = "The Marauders"
+  description = "分布式爬虫，采集架构，逆向，WEB开发"
+#  footer = "The Marauders"
   metaKeywords = ["blog", "gokarna", "hugo"]
   showBackToTopButton = true # true or false for "back to top" button on posts and pages
 
   socialIcons = [
     {name = "twitter", url = "https://example.com"},
+#    {name = "python", url = "/images/python-logo.jpeg"},
     {name = "linkedin", url = "https://example.com"},
     {name = "stackoverflow", url = "https://example.com"},
     {name = "dribbble", url = "https://example.com"},
@@ -82,17 +83,17 @@ title = "Gokarna"
     url = "https://github.com/gokarna-theme/gokarna-hugo"
     weight = 5
 
-  [[menu.main]]
-    identifier = "buymeacoffee"
-    pre = "<span data-feather='coffee'></span>"
-    url = "https://www.buymeacoffee.com/avijitgupta"
-    weight = 6
+#  [[menu.main]]
+#    identifier = "buymeacoffee"
+#    pre = "<span data-feather='coffee'></span>"
+#    url = "https://www.buymeacoffee.com/avijitgupta"
+#    weight = 6
 
-  [[menu.main]]
-    identifier = "rss"
-    pre = "<span data-feather='rss'></span>"
-    url = "/index.xml"
-    weight = 7
+#  [[menu.main]]
+#    identifier = "rss"
+#    pre = "<span data-feather='rss'></span>"
+#    url = "/index.xml"
+#    weight = 7
 
 [markup]
   [markup.tableOfContents]
