--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/gokarna"]
 	path = themes/gokarna
-	url = https://github.com/gokarna-theme/gokarna-hugo.git
+	url = git@github.com:gokarna-theme/gokarna-hugo.git
